<resources>
    <string name="app_name">ZlosliwyBudzik</string>
    <string name="title_activity_configure_alarm">ConfigureAlarmActivity</string>
    <string name="single">Pojedynczy</string>
    <string name="repeatable">powtarzajacy się ?</string>
    <string name="title_activity_setup_time">SetupTimeActivity</string>
    <string name="add">Dodaj</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="next">Następny</string>
    <string name="title_activity_disable_alarm">DisableAlarmActivity</string>
    <string name="disable">Wyłącz</string>
    <string name="forceDisable">Wymuś wyłączenie</string>
    <string name="addAlarm">Dodaj alarm</string>
    <string name="cancelAllAlarms">Anuluj wszystkie alarmy</string>
    <string name="showAlarms">Pokaż alarmy</string>
</resources>
