<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.vistula.mkedron.zlosliwybudzik.ConfigureAlarmActivity"
    tools:showIn="@layout/activity_configure_alarm">

    <ToggleButton
        android:id="@+id/singleToogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/single"
        android:textOff="@string/repeatable"
        android:textOn="@string/single"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/daysLayout"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/singleToogle"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <CheckBox
            android:id="@+id/mondayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/tuesdayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/wednesdayCheckBox"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/thursdayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/fridayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/saturdayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />

        <CheckBox
            android:id="@+id/sundayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="79dp" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:onClick="goToTimeSetup"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
