<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.vistula.mkedron.zlosliwybudzik.MenuActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/addAlarm"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:onClick="addAlarm"
        android:text="@string/addAlarm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/cancelAllAlarms"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelAllAlarms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelAlarms"
        android:text="@string/cancelAllAlarms"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showAlarms"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:onClick="showAlarms"
        android:text="@string/showAlarms"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/cancelAllAlarms"
        app:layout_constraintTop_toBottomOf="@+id/cancelAllAlarms"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cancelAllAlarms" />

</android.support.constraint.ConstraintLayout>
